# FOK-GYEM-Tetris-native

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  common.cpp  common.h  config.h  display.cpp  display.h  econio.c  econio.h  field.cpp  field.h  main.cpp  platformio.ini  platformio.ini.example  tetrimino.cpp  tetrimino.h
include/: common.h  config.h  display.h  field.h  io.h  tetrimino.h  tetromino.h
lib/econio/: README.md  econio.c  econio.h
src/: common.arduino.cpp  common.pc.cpp  display.cpp  field.cpp  io.arduino.cpp  io.cpp  io.pc.cpp  main.cpp  tetrimino.cpp  tetromino.cpp
